04_services/nextcloud/base/deployment.yaml
---
# Source: nextcloud/charts/nextcloud/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nextcloud
  labels:
    app.kubernetes.io/component: app
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/component: app
  template:
    metadata:
      labels:
        app.kubernetes.io/component: app
        nextcloud-redis-client: "true"
    spec:
      serviceAccountName: nextcloud
      containers:
        - name: nextcloud
#          securityContext:
#            runAsUser: 33
#            runAsGroup: 33
          image: "nextcloud:20.0.0"
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /status.php
              port: http
              httpHeaders:
                - name: Host
                  value: "nextcloud.192.168.2.105.xip.io"
            initialDelaySeconds: 300
            periodSeconds: 15
            timeoutSeconds: 5
            successThreshold: 1
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /status.php
              port: http
              httpHeaders:
                - name: Host
                  value: "nextcloud.192.168.2.105.xip.io"
            initialDelaySeconds: 300
            periodSeconds: 15
            timeoutSeconds: 5
            successThreshold: 1
            failureThreshold: 3
          resources:
            limits:
              cpu: 100m
              memory: 512Mi
            requests:
              cpu: 100m
              memory: 256Mi
          volumeMounts:
            - name: nextcloud-data
              mountPath: /var/www/
              subPath: root
            - name: nextcloud-data
              mountPath: /var/www/html
              subPath: html
            - name: nextcloud-data
              mountPath: /var/www/html/data
              subPath: data
            - name: nextcloud-data
              mountPath: /var/www/html/config
              subPath: config
            - name: nextcloud-data
              mountPath: /var/www/html/custom_apps
              subPath: custom_apps
            - name: nextcloud-data
              mountPath: /var/www/tmp
              subPath: tmp
            - name: nextcloud-data
              mountPath: /var/www/html/themes
              subPath: themes
      volumes:
        - name: nextcloud-data
          emptyDir: {}
#          persistentVolumeClaim:
#            claimName: nextcloud-nextcloud
        - name: nextcloud-nginx-config
          configMap:
            name: nextcloud-nginxconfig
      # Will mount configuration files as www-data (id: 33) for nextcloud
#      securityContext:
#        fsGroup: 33
#
