04_services/nextcloud/base/metrics-deployment.yaml
---
# Source: nextcloud/charts/nextcloud/templates/metrics-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nextcloud-metrics
  labels:
    app.kubernetes.io/component: metrics
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/component: metrics
  template:
    metadata:
      labels:
        app.kubernetes.io/component: metrics
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        runAsGroup: 1000
      containers:
      - name: metrics-exporter
        image: "xperimental/nextcloud-exporter:v0.3.0"
        imagePullPolicy: IfNotPresent
        ports:
        - name: metrics
          containerPort: 9205
